# bot-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  config.py  create_revision.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 5ddad1f4a444_init.py
botunderscorename/: __main__.py  bot.py  config.py  inter.py
botunderscorename/cogs/extras/: views.py
botunderscorename/exts/: error_handler.py
logs/: .gitignore
