[tool.poetry]
name = "template"
version = "0.1.0"
description = "Template for nextcord discord bots"
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = {extras = ["speed"], version = "^2.4.0"}
uvloop = "^0.17.0"
ooliver-botbase = "^1.22.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
